[package]
name = "pseudopty"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.24.0"
nix = { version = "0.24.2", features = ["term", "process"] }
termwiz = "0.16.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt"] }
tui = "0.18.0"
unicode-width = "0.1.9"
